<resources>
    <string name="app_name">ToDoList</string>
    <string name="add_new_list">Add New List</string>
    <string name="title">Title</string>
    <string name="back_to_home">Back to home</string>
    <string name="save_the_list">save the list</string>
    <string name="to_do">To Do</string>
    <string name="are_you_sure">Are You Sure?</string>
    <string name="you_are_delete_this_to_do">You Are Delete this TO DO 😢</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="to_do_list">To Do List</string>
    <string name="list_view">List View</string>
    <string name="grid_view">Grid View</string>
    <string name="set_remainder">Set Remainder</string>
    <string name="pin_top">Pin Top</string>
    <string name="notes">NOTES</string>
    <string name="remainder">Remainder</string>
    <string name="dismiss">Dismiss</string>
    <string name="open_to_do">Open To Do</string>
    <string name="task_description">Task Description</string>
    <string name="new_task">New Task</string>
</resources>